# gx

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  install.sh  package.json
crates/gx/: Cargo.toml
crates/gx/src/: cli.rs  commands.rs  config.rs  detect.rs  errors.rs  fuzzy.rs  index_store.rs  lib.rs  main.rs  path.rs  resolve_name.rs  templates.rs  time.rs  types.rs  url.rs
crates/gx/src/commands/: clone.rs  config_cmd.rs  doctor.rs  index_repos.rs  init.rs  ls.rs  open.rs  rebuild.rs  recent.rs  resolve.rs  resume.rs  shell_init.rs
crates/gx/tests/: parity.rs  smoke.rs  snapshots.rs
crates/gx/tests/fixtures/: README.md  config.json  index.json
crates/gx/tests/snapshots/: clone_no_arg.snap  config_show_defaults.snap  help.snap  init_bad_type.snap  ls.snap  ls_empty.snap  parity__config_set_editor.config.json.snap  parity__config_set_editor.stderr.snap  parity__config_show.stderr.snap  parity__config_show.stdout.snap  parity__help_flag.stdout.snap  parity__ls.stdout.snap  parity__recent_limit_2.stdout.snap  parity__recent_unlimited.stdout.snap  parity__resolve_exact.index.json.snap  parity__resolve_exact.stdout.snap  parity__resolve_fuzzy_auto.stderr.snap  parity__resolve_list.exit.snap  parity__resolve_list.stdout.snap  parity__resolve_missing.exit.snap  parity__resolve_missing.stderr.snap  parity__resolve_missing.stdout.snap  parity__shell_init_bash.stdout.snap  parity__shell_init_fish.stdout.snap  parity__shell_init_zsh.stderr.snap  parity__shell_init_zsh.stdout.snap  parity__version_flag.stdout.snap  recent.snap  version.snap  (+10 more)
(+100 files in other folders)
