[package]
name = "gx"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A fast git project manager (Rust port — work in progress)"
publish = false

[lib]
name = "gx"
path = "src/lib.rs"

[[bin]]
name = "gx"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
thiserror = "2"
dirs = "5"
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
insta = { version = "1", features = ["filters"] }
tempfile = "3"

